--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,13 @@
+@import "../../global.scss";
+
 .intro{
     background-color: white;
     display: flex;
 
+    @include mobile{
+        flex-direction: column;
+        align-items: center;
+    }
     .left{
         flex: 0.5;
         overflow: hidden;
@@ -16,6 +22,8 @@
             float: right;
             img{
                 width: 100%;
+
+                
             }
         }
 
