--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .projects{
     background-color: white;
 
@@ -16,8 +18,17 @@
         width: 100%;
         height: 95%;
 
+        @include mobile{
+            flex-direction: column;
+            overflow-y: scroll;
+        }
+
         .column{
             flex:0.333;
+
+            @include mobile{
+                flex: none;
+            }
 
             .itemContainer{
                 border-style: ridge;
